# lab-3-Stack

./: CMakeLists.txt  README.md
Formula/: CMakeLists.txt  main.cpp
FormulaLib/: CMakeLists.txt  Formula.cpp  Formula.h  Operations.h
Stack/: CMakeLists.txt  main.cpp
StackLib/: CMakeLists.txt  Stack.h
StringLib/: CMakeLists.txt  String.h  TString.cpp  main.cpp
gtest/: test_postfix.cpp  test_tstack.cpp
test/: CMakeLists.txt  test_main.cpp  test_tformula.cpp  test_tstack.cpp
